Implemented a toxic comment moderation web application for YouTube comments.

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,6 +4,7 @@
     <title>Toxic Comment Deletion</title>
 </head>
 <body>
+    <%- include('../partials/header.ejs') %>
     <%- body %>
 </body>
 </html>
